Add a new codec to implement OSQ for 4 and 8 bit quantized vectors (#15169)
Unlike the existing ScalarQuantizer selects a mode based on an enum to quantize to unsigned bytes or
packed nibbles using the same packing scheme as the existing scalar quantized codec. Seven bits is also
supported for anyone interested in backward compatibility, but this setting is discouraged.

This is separate from Lucene102BinaryQuantizedVectorsFormat as we need a larger value to store
the component sum for each vector owing to larger quantized values.

This closes #15064

---------

Co-authored-by: Benjamin Trent <ben.w.trent@gmail.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -25,6 +25,8 @@ New Features
 * GITHUB#15176: Add `[Float|Byte]VectorValues#rescorer(element[])` interface to allow optimized rescoring of vectors.
   (Ben Trent)
 
+* GITHUB#15169: Add codecs for 4 and 8 bit Optimized Scalar Quantization vectors (Trevor McCulloch)
+
 Improvements
 ---------------------
 # GITHUB#15148: Add support uint8 distance and allow 8 bit scalar quantization (Trevor McCulloch)
