[QueryCache] Use RamUsageEstimator instead of defaulting to 1024 bytes for non-accountable query size (#15124)
* Use RamUsageEstimator to calculate query size instead of the default 1024 bytes for non accountable queries

* Use try-with-resources for directory and indexWriter

* Adding changes to cache query size and queries per clause to reduce impact of repeated visit() calls during RamUsageEstimator.sizeOf()

* Adding changelog entry

* Making queries per clause list immutable

* Adding unit test to verify query size is cached correctly

* Renmaing QueryMetadata to Record

* Changing query metadata to record type and removing boolean query changes

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -64,6 +64,8 @@ Improvements
   SIGSEGV with the old unsafe "mmap hack", which has been replaced by MemorySegments.
   (Uwe Schindler, Robert Muir)
 
+* GITHUB#15124: Use RamUsageEstimator to calculate size for non-accountable queries. (Sagar Upadhyaya)
+
 Optimizations
 ---------------------
 * GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)
