Fix SmartChinese to only deserialize data from classpath with a native array filter applied and never cache dictionaries from custom locations (#15237)
* Fix SmartChinese to only serialize data from classpath with a native array filter applied and never cache dictionaries from custom locations

* fix exception handling

* add CHANGES.txt

* fix exception handling

* fix typo in CHANGES.txt

* Restore the code to regenerate the serialized file

* Disallow any serialization in test-framework as early as possible (we can't do that via sysprops due to Gradle)

* Install a serialization filter that only allows Gradle's test runner config deserialization

* fix errorprone

* use same logic like for security manager to install the filter

* add new filter to CHANGES.txt

* Improve performance by only installing a filter if we're not called from Gradle

* simplify

* Add a test for the deserialization filter

* fix typo

* improve test

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -187,7 +187,10 @@ Bug Fixes
 
 Other
 ---------------------
-(No changes)
+* GITHUB#15237: Fix SmartChinese to only deserialize dictionary data from classpath with a native array
+  filter applied and never cache dictionaries from custom locations. Also install a global deserialization
+  filter factory that disallows any unprotected deserialization while running tests.
+  (Uwe Schindler, Isaac David)
 
 ======================= Lucene 10.3.0 =======================
 
