Handle inconsistent schema on flush with index sorts (#15125)
If index sorts are configured and a document's schema is inconsistent 
with existing segments, IndexWriter may encounter a NullPointerException
when building sort comparators.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -98,6 +98,8 @@ Bug Fixes
 
 * GITHUB#15213: Don't normalize centroids with zero samples, which caused divide-by-zero. (Mike Sokolov)
 
+* GITHUB#15125: Handle inconsistent schema on flush with index sorts (Nhat Nguyen)
+
 Changes in Runtime Behavior
 ---------------------
 * GITHUB#14187: The query cache is now disabled by default. (Adrien Grand)
