--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -205,6 +205,10 @@ Other
   Applications using SecurityManager now need to grant SerializablePermission("serialFilter")
   to the analysis-smartcn module. (Uwe Schindler, Isaac David)
 
+Build
+---------------------
+* Upgrade forbiddenapis to version 3.10.  (Uwe Schindler)
+
 ======================= Lucene 10.3.0 =======================
 
 API Changes
