FirstPassGroupingCollector supports ignoring docs without group field (#15167)
Resolves a TODO in FirstPassGroupingCollector by introducing a new parameter 
ignoreDocsWithoutGroupField. If true, we ignore documents that don't have 
the group field instead of putting them into a null group.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -51,6 +51,8 @@ Optimizations
 * GITHUB#15151: Use `SimScorer#score` bulk API to compute impact scores per
   block of postings. (Adrien Grand)
 
+* GITHUB#15167: FirstPassGroupingCollector supports ignoring docs without group field (Binlong Gao)
+
 * GITHUB#15160: Increased the size used for blocks of postings from 128 to 256.
   This gives a noticeable speedup to many queries. (Adrien Grand)
 
