--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -199,7 +199,7 @@ Bug Fixes
   removing co-planar points to do it once after all holes are removed instead of doing it for each
   removed hole.
 
-* GITHUB#15319: Fix potential hang initialisation TermsEnum and BaseTermsEnum (Chris Hegarty)
+* GITHUB#15319: Fix potential hang in initialisation of TermsEnum and BaseTermsEnum (Chris Hegarty)
 
 Other
 ---------------------
