Random overhead improvements (#15327)
* Fix the code so that testing with -Ptests.asserts=false passes.

* More tests that don't work with assertions disabled.

* Pick tests.asserts randomly based on the main seed. Use assertions 75% of the time.

* Changes entry.

* Clean up duplicate assertion-verifying code.

* Add a new build option tests.random.maxcalls for debugging too many calls to the asserting Random returned from LuceneTestCase.random(). Added LuceneTestCase.nonAssertingRandom(Random) to acquire a fast, non-asserting random instance for intense local computation. Modified a bunch of tests that exceeded 1 million calls to random() result.

* Added another option for low-level debugging of intense random() calls. tests.random.maxacquires will terminate if too many random() calls are called from within a single test. Corrected a few tests where this was the case.

* Tidy and correct a debugging check in LuceneTestCase.

* Final minor touches.

* Changes entry.

* Changes entry.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -63,8 +63,6 @@ Improvements
   This avoids clashes with other ASM versions on classpath because it removes the dependency.
   (Uwe Schindler)
 
-
-
 * GITHUB#15002: Remove synchronized WeakHashMap from IndexReader. This was added to help prevent
   SIGSEGV with the old unsafe "mmap hack", which has been replaced by MemorySegments.
   (Uwe Schindler, Robert Muir)
@@ -106,7 +104,11 @@ Changes in Runtime Behavior
 
 Build
 ---------------------
-* GITHUB#15325: Run the tests with assertions disabled ~25% of the time #15325 (Dawid Weiss)
+* GITHUB#15327: New low-level build options to detect abuse of LuceneTestCase.random():
+  tests.random.maxacquires and tests.random.maxcalls (Robert Muir, Dawid Weiss)
+
+* GITHUB#15325: Run the tests with assertions disabled ~25% of the time #15325
+  (Robert Muir, Dawid Weiss)
 
 * GITHUB#14804: Detect and ban wildcard imports in Java (Robert Muir, Dawid Weiss)
 
