--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -19,6 +19,9 @@ API Changes
 
 New Features
 ---------------------
+* GITHUB#15328: VectorSimilarityFunction.getValues() now implements doubleVal allowing its
+  use in FunctionScoreQuery. (hossman)
+
 * GITHUB#14565: Add ParentsChildrenBlockJoinQuery that supports parent and child filter in the same query
   along with limiting number of child documents to retrieve per parent. (Jinny Wang)
 
