--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -174,7 +174,7 @@ Improvements
 
 * GITHUB#15184: Refactoring internal HNSWGraphBuilder's APIs and avoid creating new scorer for each call (Patrick Zhai)
 
-* GITHUB#15332: Solve the problem of excessive memory usage in ultra-long text search case (linyunanit)
+* GITHUB#15332: Add PhraseQuery.Builder.setMaxTerms() method to limit the maximum number of terms and excessive memory use (linyunanit)
 
 Optimizations
 ---------------------
