--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -131,6 +131,7 @@ Other
 * GITHUB#14761: Use more Comparators for PriorityQueue implementations. (Simon Cooper)
 * GITHUB#14817: Refactor some complex uses of PriorityQueue to use Comparators. (Simon Cooper)
 
+* GITHUB#14607: Revise strategy for opening an index for reading (Rahul Goswami)
 ======================= Lucene 10.4.0 =======================
 
 API Changes
