Move CHANGES.txt entry to 10.4.0 API Changes section
The forceMergeDeletes() API change should be documented in the 10.4.0
release (the target version for this feature) under API Changes, not
in the 11.0.0 Improvements section.

Moved the entry from:
- 11.0.0 → Improvements
To:
- 10.4.0 → API Changes

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -69,12 +69,6 @@ Improvements
 
 * GITHUB#15124: Use RamUsageEstimator to calculate size for non-accountable queries. (Sagar Upadhyaya)
 
-* GITHUB#14515: IndexWriter.forceMergeDeletes() now returns MergePolicy.MergeObserver,
-  allowing applications to monitor merge progress, wait for completion (synchronously
-  via await() or asynchronously via CompletableFuture), and inspect individual merges.
-  Backward compatible - existing code that ignores the return value works unchanged.
-  (Salvatore Campagna)
-
 Optimizations
 ---------------------
 * GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)
@@ -150,6 +144,12 @@ API Changes
 
 * GITHUB#15234: Remove unused method which does unsafe XML parsing.
   (Uwe Schindler, Isaac David)
+
+* GITHUB#14515: IndexWriter.forceMergeDeletes() now returns MergePolicy.MergeObserver,
+  allowing applications to monitor merge progress and wait for completion. The observer
+  provides methods to query merge count, check completion status, and wait synchronously
+  (with optional timeout) or asynchronously via CompletableFuture. Backward compatible -
+  existing code that ignores the return value works unchanged. (Salvatore Campagna)
 
 New Features
 ---------------------
