Add method in DirectWriter to compute how many bytes are written for encoding a number of values using a number of bits per value. (#15422)

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -153,6 +153,9 @@ API Changes
   (with optional timeout) or asynchronously via CompletableFuture. Backward compatible -
   existing code that ignores the return value works unchanged. (Salvatore Campagna)
 
+* GITHUB#15422: Add a new method in DirectWriter to compute how many bytes are written for encoding a number of values using a number of
+  bits per value. (Ignacio Vera)
+
 New Features
 ---------------------
 * GITHUB#15328: VectorSimilarityFunction.getValues() now implements doubleVal allowing its
