Avoid reconstructing HNSW graphs during segment merging. (#15003)
optimizes HNSW graph merging. Now instead of not considering a large graph to merge into, deleted nodes are removed and the related connections are repaired. Additionally, nodes might be promoted to higher levels to account for loss of connectivity at higher layers. 

Especially in singleton merges, this improves throughput significantly.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -231,6 +231,8 @@ Optimizations
 
 # GITHUB#15303: Speed up NumericUtils#{add,subtract} by operating on integers instead of bytes. (Kaival Parikh)
 
+* GITHUB#15003: Avoid reconstructing HNSW graph during merging (Pulkit Gupta)
+
 Bug Fixes
 ---------------------
 * GITHUB#14161: PointInSetQuery's constructor now throws IllegalArgumentException
