Improve round trip conversion of ValueSource <-> DoublesValueSource (#15406)
(cherry picked from commit ba277acb0f3eb00c0c64e40f2b4ed205d3a1ae22)

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -103,6 +103,8 @@ Optimizations
 
 * GITHUB#15003: Avoid reconstructing HNSW graph during merging (Pulkit Gupta)
 
+* GITHUB#15406: Improve round trip conversion of ValueSource <-> DoublesValueSource (hossman)
+
 Bug Fixes
 ---------------------
 * GITHUB#14161: PointInSetQuery's constructor now throws IllegalArgumentException
