--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -54,6 +54,8 @@ API Changes
 
 * GITHUB#15486: Remove deprecated SortField.setMissingValue() method (Alan Woodward)
 
+* GITHUB#15452: Ensure that Filter classes properly delegate to the decorated instances (Benjamin Lerer)
+
 New Features
 ---------------------
 
