Add a public NumericDocValuesRangeQuery class (#15479)
SortedNumericDocValuesRangeQuery and IndexSortSortedNumericDocValuesRangeQuery
both implement queries over ranges of numeric doc values, but they cannot be
easily introspected. This commit adds a common base class which exposes the
field, lowerValue and upperValue of the query.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -66,6 +66,8 @@ Improvements
 
 * GITHUB#15425: Refactoring internal HnswGraph.NodesIterator to avoid unneeded copying and sorting (Mike Sokolov)
 
+* GITHUB#15479: Add NumericDocValueRangeQuery base class to add accessor methods for field, lower and upper values (Alan Woodward)
+
 Optimizations
 ---------------------
 * GITHUB#15140: Optimize TopScoreDocCollector with TernaryLongHeap for improved performance over Binary-LongHeap. (Ramakrishna Chilaka)
